# NNfractals

./: .gitignore  Cargo.toml  INSTALL.fr.md  INSTALL.md  PRINCIPLES.md  README.md  aesthetic_scorer.py  clip_model.json  colormap_loop_state.json  config.toml  config2.toml  config3.toml  config4.toml  diversity_loop_state.json  evolution2.pid  quickkey.sh  recursion_model.json  requirements.txt  requirements_aesthetic.txt  run.sh
scripts/: LOOP_RUNBOOK.md  analyze_diversity.py  colormap_chart.py  colormap_finalize.sh  colormap_switch.py  compare_scorers.py  dedup.py  diversity_reapply.sh  evo_daemon.sh  fit_clip_model.py  fit_recursion_model.py  install-deps.sh  loop_analyze.py  loop_report.py  recursion_reapply.sh  score_extra.py  train_pref.py
src/: aesthetic.rs  colormap.rs  config.rs  cppn.rs  dd.rs  display.rs  fitness.rs  formula.rs  formula_usage.rs  fractal.rs  fractal.wgsl  genome.rs  gui_font.rs  io.rs  lib.rs  main.rs  optimizer.rs  recursion_model.rs  render_gpu.rs  transformer.rs
