[package]
name = "nnfractals"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nnfractals"
path = "src/main.rs"

[[bin]]
name = "nnfractals-viewer"
path = "src/bin/viewer.rs"
required-features = ["viewer", "wgpu-backend"]

[features]
default = ["wgpu-backend"]
wgpu-backend = ["dep:wgpu", "dep:pollster"]
ndarray-backend = []
viewer = ["dep:eframe"]

[dependencies]
wgpu       = { version = "29", optional = true }
pollster   = { version = "0.3", optional = true }
eframe     = { version = "0.35", optional = true }
image      = "0.25"
colorous   = "1"
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
rand       = "0.9"
rayon      = "1"
crossterm  = "0.29"
anyhow     = "1"
ctrlc      = "3"

